# RULA-REBA_APP

./: .gitignore  README.md
backend/: .env.example  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260623_0001_initial_schema.py  20260626_0002_worker_enrollment_images.py  20260627_0003_worker_enrollment_quality.py  20260627_0004_ergonomic_events.py  20260627_0005_event_review.py  20260628_0006_usernames.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py  ws.py
backend/app/api/v1/: router.py
backend/app/api/v1/routes/: analytics.py  auth.py  camera_nodes.py  device_pairings.py  event_reviews.py  reports.py  scoring.py  sessions.py  version.py  worker_enrollments.py  workers.py
backend/app/core/: config.py  security.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  activity.py  assessment.py  camera_node.py  detection.py  device_pairing.py  edge_event.py  ergonomic_event.py  mixins.py  refresh_token.py  report.py  review_item.py  session.py  session_worker.py  snapshot.py  user.py  worker.py  worker_enrollment_image.py
backend/app/schemas/: analytics.py  auth.py  camera_node.py  device_pairing.py  edge.py  ergonomic_event.py  event_review.py  report.py  scoring.py  session.py  session_summary.py  worker.py  worker_enrollment.py
backend/app/services/: detection_ingest.py  event_engine.py  exposure_analytics.py  live_hub.py  report_generation.py  scoring.py  session_codes.py  snapshot_capture.py
backend/tests/: conftest.py  test_api_smoke.py  test_scoring.py  test_websocket_hub.py
(+20 files in other folders)
