[project]
name = "ergoquipt-backend"
version = "0.1.0"
description = "FastAPI backend for ErgoQuipt RULA/REBA assessment platform"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13.2",
    "email-validator>=2.2.0",
    "fastapi>=0.115.0",
    "bcrypt<5",
    "httpx>=0.27.2",
    "passlib[bcrypt]>=1.7.4",
    "psycopg[binary]>=3.2.1",
    "pydantic-settings>=2.5.2",
    "pillow>=10.4.0",
    "pyjwt>=2.9.0",
    "python-multipart>=0.0.9",
    "reportlab>=5.0.0",
    "sqlalchemy>=2.0.34",
    "uvicorn[standard]>=0.30.6",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.2",
    "pytest>=8.3.2",
    "ruff>=0.6.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"
